--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,11 @@
 @import 'tailwindcss';
-@plugin 'daisyui';
+/* @plugin 'daisyui'; */
+
+@plugin "daisyui" {
+	themes:
+		light --default,
+		/* synthwave --prefersdark; */ night --prefersdark;
+}
 
 /* Smooth scrolling */
 html {
