--- a/src/app.css
+++ b/src/app.css
@@ -4,10 +4,18 @@
 @plugin "daisyui" {
 	themes:
 		light --default,
-		/* synthwave --prefersdark; */ night --prefersdark;
+		night --prefersdark;
+	/* synthwave --prefersdark; */
 }
 
 /* Smooth scrolling */
 html {
 	scroll-behavior: smooth;
+}
+.line-clamp-2 {
+	display: -webkit-box;
+	-webkit-line-clamp: 2;
+	line-clamp: 2;
+	-webkit-box-orient: vertical;
+	overflow: hidden;
 }
